[tool.poetry]
name = "census"
version = "0.1.0"
description = "Assignment 6"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.1"
us = "^2.0.2"
requests = "^2.28.1"
lxml = "^4.9.1"
types-requests = "^2.28.11.4"
pytest = "^7.2.0"
black = "^22.10.0"
ipykernel = "^6.17.1"
responses = "^0.22.0"
mypy = "^0.990"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]