[tool.poetry]
name = "NBA Salary Analysis"
version = "0.1.0"
description = "Final Proj"
authors = ["Alex Welch walex@wustl.edu"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.1"
us = "^2.0.2"
requests = "^2.28.1"
lxml = "^4.9.1"
types-requests = "^2.28.11.4"
pytest = "^7.2.0"
black = "^22.10.0"
ipykernel = "^6.17.1"
responses = "^0.22.0"
mypy = "^0.990"
beautifulsoup4="4.8.2"
bs4="0.0.1"
numpy="^1.21.0"
python-dateutil="2.8.1"
pytz="^2020.1"
six="1.13.0"
soupsieve="1.9.5"
unidecode="1.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]